# Physics_Projects

./: .gitignore  README.md  pyproject.toml
Electromagnitism/: 2d_fdtd.cpp
Electromagnitism/FDTD/: 1D.cpp  1D.py  2D.cpp  2D.py  3D.cpp
FDTD/: 3D.py  Makefile  README.md
Ising/: Makefile  algorithms.cpp  analysis.py  ising.cpp  ising.hpp  ising_cuda.cu  ising_cuda.cuh  load_data.py  main.cpp  main_cuda.cu  observables.cpp  plotting.py  wolff.cpp
Statistical/: Makefile  PHYSICS_IMPROVEMENTS.md  analysis.py  analysis_metrics.csv  analysis_metrics_quick.csv  beta_bootstrap.csv  beta_bootstrap_quick.csv  data.csv  data_quick.csv  debug_crossings.py  ising.cpp  ising.hpp  ising_cuda.cu  ising_cuda.cuh  load_data.py  main.cpp  main_cuda.cu  metropolis.cpp  observables.cpp  plotting.py  tc_by_L.csv
Turbulence-cnn/: README.md  stats.npy  text.txt
Turbulence-cnn/data/: augmentation.py  dataset.py
Turbulence-cnn/models/: classifier.py  losses.py  unet.py
Turbulence-cnn/notebooks/: 01_solver_demo.ipynb  02_data_exploration.ipynb  03_results_analysis.ipynb
Turbulence-cnn/runs/exp_01/: history.npy
Turbulence-cnn/runs/exp_04/: history.npy
Turbulence-cnn/solver/: generate_data.py  ns_solver.py  pressure_poisson.py
Turbulence-cnn/train/: evaluate.py  train.py
