[project]
name = "physics"
version = "3.0.0"
description = "Physics Simulations repo"
authors = [
    {name = "kevin",email = "kevingoswami86@gmail.com"}
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.14,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "torchvision (>=0.27.0,<0.28.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
